--- a/style.css
+++ b/style.css
@@ -9,6 +9,51 @@
 .fab-links {
     margin-right: 45px;
 }
+
+.close-confirm-icon {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    font-size: 20px;
+    color: white;
+    cursor:pointer;
+}
+
+ /*START CONTACT FORM*/
+/* label color */
+ .input-field label {
+   color: #000 !important;
+ }
+ /* label focus color */
+ .input-field input[type=text]:focus + label {
+   color: #1976d2 !important;
+ }
+
+ .input-field textarea:focus + label {
+   color: #1976d2 !important;
+ }
+ /* label underline focus color */
+ .input-field input[type=text]:focus {
+   border-bottom: 1px solid #1976d2 !important;
+   box-shadow: 0 1px 0 0 #1976d2 !important;
+ }
+
+ .input-field input[type=email]:focus {
+   border-bottom: 1px solid #1976d2 !important;
+   box-shadow: 0 1px 0 0 #1976d2 !important;
+ }
+
+ .input-field textarea:focus {
+   border-bottom: 1px solid #1976d2 !important;
+   box-shadow: 0 1px 0 0 #1976d2 !important;
+ }
+
+ /* icon prefix focus color */
+ .input-field .prefix.active {
+   color: #1976d2 !important;
+ }
+ /*END CONTACT FORM*/
+
 .page-footer {
     padding-top: 0;
 }
